// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsolePage renders a warning banner if there is not an authorized user 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning show"
    hidden={false}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders an error banner when there was an error loading programs 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger show"
    hidden={false}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            Request failed with HTTP 418
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
</div>
`;

exports[`ConsolePage renders error when filter returns no programs 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
  <div>
    <div
      className="pgn__searchfield d-flex mt-3"
    >
      <form
        className="d-flex align-items-center w-100"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <label
          className="m-0"
          htmlFor="pgn-searchfield-input-7"
        >
          <span
            className="sr-only"
          >
            search
          </span>
        </label>
        <input
          className="form-control"
          disabled={false}
          id="pgn-searchfield-input-7"
          name="searchfield-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by Program Title"
          role="searchbox"
          type="text"
          value=""
        />
        <button
          className="btn"
          disabled={false}
          type="submit"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <span
            className="sr-only"
          >
            submit search
          </span>
        </button>
      </form>
    </div>
    <div
      className="mt-2 alert fade alert-dismissible alert-danger show"
      hidden={false}
      role="alert"
    >
      <button
        aria-label="Close"
        className="btn close"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <div
        className="alert-dialog"
      >
        Invalid program title.
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="mt-4 pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
    <div
      className="container mb-4"
    >
      <h2>
        a masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container mb-4"
    >
      <h2>
        b masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ConsolePage renders program banners when they are included 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
  <div>
    <div
      className="pgn__searchfield d-flex mt-3"
    >
      <form
        className="d-flex align-items-center w-100"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <label
          className="m-0"
          htmlFor="pgn-searchfield-input-4"
        >
          <span
            className="sr-only"
          >
            search
          </span>
        </label>
        <input
          className="form-control"
          disabled={false}
          id="pgn-searchfield-input-4"
          name="searchfield-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by Program Title"
          role="searchbox"
          type="text"
          value=""
        />
        <button
          className="btn"
          disabled={false}
          type="submit"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <span
            className="sr-only"
          >
            submit search
          </span>
        </button>
      </form>
    </div>
    <div
      className="mt-2 alert fade alert-dismissible alert-danger"
      hidden={true}
      role="alert"
    >
      <button
        aria-label="Close"
        className="btn close"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <div
        className="alert-dialog"
      >
        Invalid program title.
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="mt-4 pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
    <div
      className="container mb-4"
    >
      <h2>
        a masters
      </h2>
      <div
        className="alert fade alert-dismissible alert-danger show"
        hidden={false}
        role="alert"
      >
        <button
          aria-label="Close"
          className="btn close"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <div
          className="alert-dialog"
        >
          <div
            className="modal-alert"
          >
            Sorry something went wrong 
          </div>
        </div>
      </div>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container mb-4"
    >
      <h2>
        b masters
      </h2>
      <div
        className="alert fade alert-dismissible alert-success show"
        hidden={false}
        role="alert"
      >
        <button
          aria-label="Close"
          className="btn close"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <div
          className="alert-dialog"
        >
          <div
            className="modal-alert"
          >
            You did it! 
          </div>
        </div>
      </div>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ConsolePage renders programs when there is data passed in 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
  <div>
    <div
      className="pgn__searchfield d-flex mt-3"
    >
      <form
        className="d-flex align-items-center w-100"
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <label
          className="m-0"
          htmlFor="pgn-searchfield-input-2"
        >
          <span
            className="sr-only"
          >
            search
          </span>
        </label>
        <input
          className="form-control"
          disabled={false}
          id="pgn-searchfield-input-2"
          name="searchfield-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by Program Title"
          role="searchbox"
          type="text"
          value=""
        />
        <button
          className="btn"
          disabled={false}
          type="submit"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <span
            className="sr-only"
          >
            submit search
          </span>
        </button>
      </form>
    </div>
    <div
      className="mt-2 alert fade alert-dismissible alert-danger"
      hidden={true}
      role="alert"
    >
      <button
        aria-label="Close"
        className="btn close"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
      <div
        className="alert-dialog"
      >
        Invalid program title.
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="mt-4 pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
    <div
      className="container mb-4"
    >
      <h2>
        a masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container mb-4"
    >
      <h2>
        b masters
      </h2>
      <div
        className="pgn_collapsible collapsible-card is-open"
      >
        <div
          aria-expanded={true}
          className="collapsible-trigger"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span>
            Manage Enrollments
          </span>
          <span
            className="collapsible-icon"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          >
            <div
              className="collapsible-body"
            >
              <div
                className="container p-0"
              >
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap mt-2"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Program Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Program Enrollments
                    </button>
                  </div>
                </div>
                <div
                  className="enrollment-row d-flex align-items-stretch flex-wrap"
                >
                  <div
                    className="col-md mb-2"
                  >
                    <div
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                    >
                      <input
                        className="sr input-overlay-hack"
                        onChange={[Function]}
                        type="file"
                      />
                      Upload Course Enrollments
                    </div>
                  </div>
                  <div
                    className="col-md mb-2"
                  >
                    <button
                      className="btn btn-outline-primary d-flex justify-content-center align-items-center h-100 w-100"
                      onClick={[Function]}
                      type="button"
                    >
                      Download Course Enrollments
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <nav
      aria-label="pagination navigation"
      className="pagination-default"
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        aria-relevant="text"
        className="sr-only"
      >
        Page 1, Current Page, of 1
      </div>
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Previous"
            className="previous page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Previous
            </div>
          </button>
        </li>
        <li
          className="page-item disabled"
        >
          <button
            aria-label="Next"
            className="next page-link btn btn-primary"
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          >
            <div>
              Next
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ConsolePage renders with the most basic props passed to it 1`] = `
<div
  className="container half-width-element py-5 align-items-start"
>
  <h1>
    Program Console
  </h1>
  <div
    className="alert fade alert-danger"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div>
        <p>
          An error was encountered while loading your program list: 
          <em>
            null
          </em>
        </p>
        <p>
          Please try waiting a moment and then refreshing the page. If the issue persists, please reach out to 
          <a
            href="mailto:partner-support@edx.org"
          >
            partner-support@edx.org
          </a>
          .
        </p>
      </div>
    </div>
  </div>
  <div
    className="alert fade alert-warning"
    hidden={true}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <p>
        It appears you do not have proper permissions to access this application. Please reach out to 
        <a
          href="mailto:partner-support@edx.org"
        >
          partner-support@edx.org
        </a>
         requesting access to the Registrar service.
      </p>
    </div>
  </div>
</div>
`;
